<resources>
    <string name="app_name">Youtuber App</string>
    <string name="button_addYoutuber">Add YouTuber</string>
    <string name="button_saveYoutuber">Save YouTuber</string>
    <string name="button_addYoutuberImage">Add Image</string>
    <string name="hint_youtuberName">YouTuber Name</string>
    <string name="hint_youtuberChannelName">YouTuber Channel Name *</string>
    <string name="menu_addYouTuber">Add</string>
    <string name="menu_deleteYoutuber">Delete</string>
    <string name="menu_cancelAdd">Cancel</string>
    <string name="error_Text">Please enter a YouTubers Channel Name</string>
    <string name="add_Image_Text">Add Photo of this YouTuber</string>
    <string name="add_DOB_Text">YouTuber\'s Date of Birth</string>
    <string name="select_youtuber_image">Select YouTuber image</string>
    <string name="change_youtuber_image">Change YouTuber image</string>
    <string name="display_youtuber_image">YouTuber image</string>
    <string name="youtuber_information">YouTuber\'s Information</string>
    <string name="rate_youtuber">Rate this YouTuber (1 -10)</string>
    <string name="search_youtuber">Search</string>
    <string name="date_picker">Date Picker</string>
    <string name="choose_image">Choose Image</string>
    <string name="youtuber_image">Youtuber Image</string>
    <string name="dialogTitle">Delete YouTuber</string>
    <string name="dialogTitleDeleteAll">Delete ALL YouTubers</string>
    <string name="dialogMessage">Are you sure you want to delete this YouTuber?</string>
    <string name="dialogMessageDeleteAll">Are you sure you want to delete ALL YouTubers?</string>
    <string name="splash_screen_text">The YouTuber App</string>
    <string name="youtuber_app_logo_description">YouTuber App Logo</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_youtuber_maps">Map of ALL YouTubers</string>
    <string name="map_youtuber_channel_name">Channel Name</string>
    <string name="map_youtuber_name">YouTuber Name</string>
    <string name="search_item">Search</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="not_registered_yet_text">Not Registered Yet ? Sign Up !</string>
    <string name="sign_in_button">Sign In</string>
    <string name="password_field">Password</string>
    <string name="email_field">Email</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered ? Sign In !</string>
    <string name="my_image_description">Image</string>
    <string name="menu_log_out">Log Out</string>
    <string name="show_favourite_youtubers">Show Favourite YouTubers</string>
    <string name="show_all_youtubers">Show ALL YouTubers</string>
    <string name="add_youtubers_work_location">YouTuber\'s Work Location</string>
    <string name="see_all_youtubers_on_map">See ALL YouTubers on Map</string>

</resources>