<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_filter"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/see_all_youtubers_on_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_delete2"
        android:title="@string/dialogTitleDeleteAll"
        android:icon="@drawable/delete_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/add_icon"
        android:title="@string/menu_addYouTuber"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/add_icon"
        android:title="@string/menu_log_out"
        app:showAsAction="ifRoom" />

</menu>