<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.setu.youtuberApp.activities.YoutuberActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/basicInfoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="YouTuber's Information"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/youtuberName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_youtuberName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/youtuberChannelName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_youtuberChannelName"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

<!--                <TextView-->
<!--                    android:id="@+id/dobTextView"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="YouTuber's Date of Birth"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"/>-->

<!--                <DatePicker-->
<!--                    android:id="@+id/youtuberDOB"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:datePickerMode="spinner"-->
<!--                    android:calendarViewShown="false"/>-->

<!--                <TextView-->
<!--                    android:id="@+id/addImageView"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:text="Add image"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"/>-->

<!--                <ImageView-->
<!--                    android:id="@+id/icon2"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:contentDescription="@string/change_youtuber_image"/>-->

<!--                <Button-->
<!--                    android:id="@+id/btnAddImage"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="16dp"-->
<!--                    android:background="@color/colorAccent"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:paddingBottom="8dp"-->
<!--                    android:stateListAnimator="@null"-->
<!--                    android:text="Add image"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="16sp" />-->

                <ImageView
                    android:id="@+id/youtuberImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addYoutuberImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="Rate this YouTuber (1 -10)"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <NumberPicker
                    android:id="@+id/youtuberRating"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addYoutuber"
                    android:textColor="@color/white"
                    android:textSize="16sp" />



            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>